# crawler

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml
skip/: skolverket.tsv  vardhandboken.tsv
src/crawler/: chunker.py  cli.py  config.py  docling_utils.py  embedder.py  external.py  gdrive.py  intranet.py  scraper.py  sheet_sync.py  single_pages.py  store.py
